--- a/notes/accounts/templates/registration/login.html
+++ b/notes/accounts/templates/registration/login.html
@@ -3,38 +3,129 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-<div class="container">
-    <div class="row">
-        {% if form.non_field_errors %}
-            {% for error in form.non_field_errors %}
-                <div class="col-lg-6 col-md-6 offset-lg-3 offset-md-3 col-sm-12 col-xs-12 alert alert-danger" style="margin-top: 3%; margin-bottom: 3%">{{ error }}</div>
-            {% endfor %}
-        {% endif %}
-        <div class="col-lg-6 col-md-6 offset-md-3">
-            <h1>Login</h1>
-            <hr>
-        </div>
+
+    <head>
+        <link href="https://fonts.googleapis.com/css2?family=Laila:wght@400;500;700&display=swap" rel="stylesheet">
+    </head>
+
+    <style>
+        .form-container {
+            display: flex;
+            justify-content: center; /* Центрирование по горизонтали */
+            flex-direction: column; /* Вертикальное размещение элементов */
+        }
+
+        .form-control {
+            margin: 5px auto;
+            border: 2px solid #ccc; /* Серый цвет рамки */
+            border-radius: 8px; /* Закругленные края */
+            padding: 10px; /* Отступы внутри поля */
+            font-size: 16px; /* Размер шрифта */
+            width: 60%; /* Занимает всю ширину родительского элемента */
+            transition: border-color 0.3s; /* Плавный переход для цвета рамки */
+        }
+
+        .form-control::placeholder {
+            color: #aaa; /* Цвет текста по умолчанию */
+            font-style: italic; /* Курсив для текста по умолчанию */
+        }
+
+        .form-control:focus {
+            border-color: #FF8E00; /* Оранжевая рамка при фокусе */
+            outline: none; /* Убираем стандартное выделение */
+        }
+
+        .welcome-container {
+            width: 100%; /* Даем 100% ширины, а flex будет управлять распределением */
+            margin: 10px auto;
+            text-align: center;
+        }
+
+        .welcome-title {
+            font-weight: bold;
+            color: black;
+            font-family: 'Laila', sans-serif;
+            font-size: 48px;
+            margin-bottom: 60px;
+        }
+
+        .text-title{
+            font-family: 'Laila', sans-serif;
+            font-size: 24px;
+        }
+
+        .custom-button {
+            font-weight: bold;
+            display: block;
+            border: 2px solid #FF8E00;
+            border-radius: 5px;
+            color: white;
+            font-family: 'Laila', sans-serif;
+            background-color: #FF8E00;
+            padding: 15px 0;
+            width: 50%;
+            margin: 30px auto;
+            font-size: 24px;
+            text-decoration: none;
+            transition: background-color 0.3s, color 0.3s;
+        }
+
+        .custom-button:hover {
+            border: 2px solid #FF9E55;
+            background-color: #FF9E55;
+            text-decoration: none;
+        }
+
+        /* Настройки для планшетов и больших экранов */
+        @media (min-width: 768px) {
+            .content-wrapper {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                margin: 0 auto;
+                width: 100%; /* Контейнер на всю ширину */
+            }
+
+            .welcome-container {
+                margin: 20px;
+            }
+
+            .form-control {
+                width: 50%;
+            }
+        }
+    </style>
+
+<div class="welcome-container">
+    {% if form.non_field_errors %}
+        {% for error in form.non_field_errors %}
+            <div class="col-lg-6 col-md-6 offset-lg-3 offset-md-3 col-sm-12 col-xs-12 alert alert-danger" style="margin-top: 3%; margin-bottom: 3%">{{ error }}</div>
+        {% endfor %}
+    {% endif %}
+    <div>
+        <h1 class="welcome-title">Login</h1>
     </div>
     <div class="row">
         <div class="col-lg-6 col-md-6 offset-md-3">
-                <form method="post" class="form" action="{% url 'login' %}">
+                <form method="post" class="form-container" action="{% url 'login' %}">
                     {% csrf_token %}
                     <input type="hidden" name="next" value="{{ next }}" />
                     <div class="row">
                         <div class="form-group col">
-                            <label for="username">{{ form.username.label }}</label>
-                            {{ form.username | add_css:"form-control" }}
+                            <label for="username" class="text-title">{{ form.username.label }}</label>
+                            {{ form.username | add_css:"form-control"}}
                         </div>
                     </div>
                     <div class="row">
                         <div class="form-group col">
-                            <label for="password">{{ form.password.label }}</label>
-                            {{ form.password | add_css:"form-control" }}
+                            <label for="password" class="text-title">{{ form.password.label }}</label>
+                            {{ form.password | add_css:"form-control"}}
                         </div>
-                        </div>
-                    <button class="btn btn-success" type="submit">Login</button>
+                    </div>
+                    <button class="custom-button" type="submit">Login</button>
                 </form>
         </div>
     </div>
+
 </div>
 {% endblock %}
