--- a/notes/accounts/templates/signup.html
+++ b/notes/accounts/templates/signup.html
@@ -3,7 +3,96 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<div class="container">
+    <head>
+        <link href="https://fonts.googleapis.com/css2?family=Laila:wght@400;500;700&display=swap" rel="stylesheet">
+    </head>
+
+    <style>
+        .welcome-container {
+            width: 100%; /* Даем 100% ширины, а flex будет управлять распределением */
+            margin: 20px auto;
+
+        }
+
+        .welcome-title {
+            font-weight: bold;
+            color: black;
+            font-family: 'Laila', sans-serif;
+            font-size: 48px;
+            margin-bottom: 60px;
+        }
+
+        .custom-button {
+            font-weight: bold;
+            display: block;
+            border: 2px solid #FF8E00;
+            border-radius: 5px;
+            color: white;
+            font-family: 'Laila', sans-serif;
+            background-color: #FF8E00;
+            padding: 15px 0;
+            width: 50%;
+            margin: 30px auto;
+            font-size: 24px;
+            text-decoration: none;
+            text-align: center;
+            transition: background-color 0.3s, color 0.3s;
+        }
+
+        .custom-button:hover {
+            border: 2px solid #FF9E55;
+            background-color: #FF9E55;
+            text-decoration: none;
+        }
+
+        .form-control {
+            width: 50%;
+        }
+
+        .text-view{
+            font-family: 'Laila', sans-serif;
+            font-size: 20px;
+        }
+
+        /* Настройки для планшетов и больших экранов */
+        @media (min-width: 768px) {
+            .content-wrapper {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                margin: 0 auto;
+                width: 100%; /* Контейнер на всю ширину */
+            }
+
+            .welcome-title {
+                font-size: 48px;
+            }
+
+            .welcome-container {
+                width: 70%; /* Текст занимает половину экрана */
+                margin: 20px;
+            }
+
+            .image-container {
+                width: 30%; /* Изображение занимает оставшуюся половину */
+                justify-content: center;
+            }
+
+            .form-control {
+                width: 100%;
+            }
+
+            .image-container img {
+                margin: auto;
+                width: 80%;
+                height: auto;
+                border-radius: 10px;
+            }
+        }
+    </style>
+
+
+<div class="welcome-container">
     <div class="row">
         {% if form.non_field_errors %}
             {% for error in form.non_field_errors %}
@@ -11,8 +100,7 @@
             {% endfor %}
         {% endif %}
         <div class="col-lg-6 col-md-6 offset-md-3">
-            <h1>Sign Up</h1>
-            <hr>
+            <h1c class="welcome-title">Sign Up</h1c>
         </div>
     </div>
     <div class="row">
@@ -21,14 +109,17 @@
                     {% csrf_token %}
                     <div class="row">
                         {% for field in form %}
-                        <div class="form-group col-lg-6 col-md-6">
+                        <div class="form-group col-lg-6 col-md-6 text-view">
                             {{ field | as_crispy_field }}
                         </div>
                         {% endfor %}
                     </div>
-                    <button class="btn btn-success" type="submit">Sign Up</button>
+                    <button class="custom-button" type="submit">Sign Up</button>
                 </form>
         </div>
     </div>
 </div>
+    <div class="image-container d-none d-md-block">
+        <img src="./../templates" alt="Notes Image">
+    </div>
 {% endblock %}
