--- a/notes/chat/templates/core/base.html
+++ b/notes/chat/templates/core/base.html
@@ -15,10 +15,10 @@
                         <section class="hero is-primary">
                             <div class="hero-body">
                                 <p class="title">
-                                    Chat Application
+                                    Forum
                                 </p>
                                 <p class="subtitle">
-                                    Connection people online
+                                    Ask question and get advice
                                 </p>
                             </div>
                         </section>
