--- a/notes/accounts/templates/index.html
+++ b/notes/accounts/templates/index.html
@@ -7,8 +7,6 @@
     </head>
 
     <style>
-        $primary-color: #FF8E00;
-        $background-color: #F5F5F5;
         $text-color: black;
 
         .welcome-container {
@@ -18,9 +16,9 @@
 
             .welcome-title {
                 text-decoration: underline;
-                text-decoration-color: $primary-color;
+                text-decoration-color: #FF8E00;
                 text-underline-offset: 20px;
-                color: $text-color;
+                color: $black;
                 font-family: 'Laila', sans-serif;
                 font-weight: 500;
                 font-size: 24px;
@@ -33,11 +31,11 @@
 
             .custom-button {
                 display: block;
-                border: 2px solid $primary-color;
+                border: 2px solid #FF8E00;
                 border-radius: 5px;
-                color: $text-color;
+                color: $black;
                 font-family: 'Laila', sans-serif;
-                background-color: $background-color;
+                background-color: #F5F5F5;
                 padding: 15px 0;
                 width: 50%;
                 margin: 30px auto;
@@ -47,7 +45,7 @@
                 transition: background-color 0.3s, color 0.3s;
 
                 &:hover {
-                    background-color: $primary-color;
+                    background-color: #FF8E00;
                     color: $text-color;
                     text-decoration: none;
                 }
