--- a/notes/accounts/templates/navbar.html
+++ b/notes/accounts/templates/navbar.html
@@ -1,24 +1,22 @@
 {% load static %}
 
 <style>
-    $navbar-bg-color: #003153;
-    $navbar-link-color: white;
     $navbar-hover-bg-color: #FF8E00;
 
     .navbar-custom {
         background-color: $navbar-bg-color;
-        color: $navbar-link-color;
+        color: white;
 
         .navbar-brand,
         .navbar-nav {
             .nav-link {
                 padding: 10px 15px;
                 border-radius: 5px;
-                color: $navbar-link-color;
+                color: white;
 
                 &:hover {
                     color: $navbar-bg-color;
-                    background-color: $navbar-hover-bg-color;
+                    background-color: #FF8E00;
                 }
             }
         }
