--- a/notes/notes/templates/modals/edit_note_modal.html
+++ b/notes/notes/templates/modals/edit_note_modal.html
@@ -1,10 +1,11 @@
+{% load i18n %}
 {% load crispy_forms_tags %}
 <div id="edit_note" class="modal fade" role="dialog" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog modal-xl modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Edit "{{ form.instance.note_title }}"</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <h5 class="modal-title">{% trans "Edit" %} "{{ form.instance.note_title }}"</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label={% trans "Close" %}>
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
@@ -19,8 +20,8 @@
                     {% endfor %}
                 </div>
                 <div class="modal-footer">
-                    <input class="btn btn-primary" type="submit" value="Save Changes"/>
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <input class="btn btn-primary" type="submit" value={% trans "Save Changes" %}/>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">{% trans Close %}</button>
                 </div>
             </form>
         </div>
