--- a/notes/accounts/templates/activation_email.html
+++ b/notes/accounts/templates/activation_email.html
@@ -1,4 +1,5 @@
-Hi {{ user.username }},
+{% load i18n %}
+{% trans "Hi" %} {{ user.username }},
 
-Please click the link below to verify your email address and activate your account:
+{% trans "Please click the link below to verify your email address and activate your account:" %}
 http://{{ domain }}{% url 'activate' uidb64=uid token=token %}
