--- a/notes/accounts/templates/navbar.html
+++ b/notes/accounts/templates/navbar.html
@@ -1,75 +1,75 @@
+{% load i18n %}
 {% load static %}
 
 <style>
-    $navbar-hover-bg-color: #FF8E00;
-
     .navbar-custom {
-        background-color: $navbar-bg-color;
+        background-color: #003153;
         color: white;
-
-        .navbar-brand,
-        .navbar-nav {
-            .nav-link {
-                padding: 10px 15px;
-                border-radius: 5px;
-                color: white;
-
-                &:hover {
-                    color: $navbar-bg-color;
-                    background-color: #FF8E00;
-                }
-            }
-        }
     }
 
+    .navbar-custom .navbar-brand,
+    .navbar-custom .navbar-nav .nav-link {
+        padding: 10px 15px;
+        border-radius: 5px;
+        color: white;
+    }
+
+    .navbar-custom .navbar-nav .nav-link:hover {
+        color: #003153;
+        background-color: #FF8E00;
+    }
 </style>
 
 <nav class="navbar navbar-expand-md navbar-custom sticky-top" data-sidebarClass="navbar-dark bg-dark">
     <a class="navbar-brand" href="{% url 'home' %}">
-        Notes
+        {% trans "Notes" %}
     </a>
     <button class="navbar-toggler leftNavbarToggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     {% if request.user.is_authenticated %}
-    <button class="ml-auto btn d-lg-none d-md-none d-sm-block d-xs-block" data-toggle="modal" data-target="#add_note" style="cursor: pointer; background-color: transparent;border-color: gray;">
-        <span class="fa fa-plus" style="color: white;"></span>
-    </button>
+        <button class="ml-auto btn d-lg-none d-md-none d-sm-block d-xs-block" data-toggle="modal"
+                data-target="#add_note" style="cursor: pointer; background-color: transparent;border-color: gray;">
+            <span class="fa fa-plus" style="color: white;"></span>
+        </button>
     {% endif %}
     <div class="navbar-collapse collapse" id="navbarNav">
         {% if request.user.is_authenticated %}
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="notes_dropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Notes
-                </a>
-                <div class="dropdown-menu" aria-labelledby="notes_dropdown">
-                    <a id="a_d" class="dropdown-item" data-toggle="modal" data-target="#add_note" style="cursor: pointer;">
-                        Add Note
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="notes_dropdown" role="button"
+                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        {% trans "Notes" %}
                     </a>
-                    <a class="dropdown-item" href="{% url 'notes' %}">Show All Notes</a>
-                </div>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Welcome, {{ request.user.username }}
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="{% url 'change_password' %}">Change Password</a>
-                    <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
-                </div>
-            </li>
-        </ul>
+                    <div class="dropdown-menu" aria-labelledby="notes_dropdown">
+                        <a id="a_d" class="dropdown-item" data-toggle="modal" data-target="#add_note"
+                           style="cursor: pointer;">
+                            {% trans "Add Note" %}
+                        </a>
+                        <a class="dropdown-item" href="{% url 'notes' %}">{% trans "Show All Notes" %}</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        {% trans "Welcome" %}, {{ request.user.username }}
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="{% url 'change_password' %}">{% trans "Change Password" %}</a>
+                        <a class="dropdown-item" href="{% url 'logout' %}">{% trans "Logout" %}</a>
+                    </div>
+                </li>
+            </ul>
         {% else %}
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item {% if request.resolver_match.url_name == 'login' %} active {% endif %}">
-                <a class="nav-link" href="{% url 'login'%}">Login</a>
-            </li>
-            <li class="nav-item {% if request.resolver_match.url_name == 'signup' %} active {% endif %}">
-                <a class="nav-link" href="{% url 'signup'%}">Sign Up</a>
-            </li>
-        </ul>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item {% if request.resolver_match.url_name == 'login' %} active {% endif %}">
+                    <a class="nav-link" href="{% url 'login' %}">{% trans "Login" %}</a>
+                </li>
+                <li class="nav-item {% if request.resolver_match.url_name == 'signup' %} active {% endif %}">
+                    <a class="nav-link" href="{% url 'signup' %}">{% trans "Sign Up" %}</a>
+                </li>
+            </ul>
         {% endif %}
     </div>
 </nav>
