--- a/notes/notes/templates/modals/delete_note_modal.html
+++ b/notes/notes/templates/modals/delete_note_modal.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 <!-- Delete Note Modal -->
 <div class="modal fade" id="delete_note_confirmation">
     <div class="modal-dialog modal-lg">
@@ -5,21 +6,23 @@
 
             <!-- Modal Header -->
             <div class="modal-header">
-                <h4 class="modal-title">Confirm Deletion</h4>
+                <h4 class="modal-title">{% trans "Confirm Deletion" %}</h4>
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
             </div>
 
             <!-- Modal body -->
             <div class="modal-body">
                 <div class="row container">
-                    <h5>Are you sure you want to delete "{{ note_detail.note_title }}"?</h5>
+                    <h5>{% trans "Are you sure you want to delete " %} "{{ note_detail.note_title }}"?</h5>
                 </div>
             </div>
 
             <!-- Modal footer -->
             <div class="modal-footer">
                 <input type="submit" class="btn btn-primary" data-dismiss="modal" value="Cancel">
-                <button type="button" class="btn btn-danger" name="delete_note"><a href="{% url 'delete_single_note' note_detail.id %}" style="text-decoration: none; color: white">Delete</a></button>
+                <button type="button" class="btn btn-danger" name="delete_note"><a
+                        href="{% url 'delete_single_note' note_detail.id %}"
+                        style="text-decoration: none; color: white">{% trans "Delete" %}</a></button>
             </div>
 
         </div>
