--- a/notes/notes/templates/note_as_pdf.html
+++ b/notes/notes/templates/note_as_pdf.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 {% load crispy_forms_tags %}
 {% block content %}
     <div class="container">
@@ -11,10 +12,12 @@
                             </p>
                         </h3>
                         <span class="float-right col-2">
-                        <a class="open-modal" data-url="{% url 'note_details_edit' note_detail.id %}" style="text-decoration: none; color: white">    
+                        <a class="open-modal" data-url="{% url 'note_details_edit' note_detail.id %}"
+                           style="text-decoration: none; color: white">
                             <span class="btn btn-primary" style="border-radius: 0;"><i class="far fa-edit"> </i></span>
                         </a>
-                        <span class="btn btn-danger" style="border-radius: 0;" data-toggle="modal" data-target="#delete_note_confirmation">
+                        <span class="btn btn-danger" style="border-radius: 0;" data-toggle="modal"
+                              data-target="#delete_note_confirmation">
                             <i class="far fa-trash-alt"> </i>
                         </span>
                     </span>
@@ -22,8 +25,9 @@
 
                     <div class="row">
                         <div class="col-12">
-                            <p style="color: gray; font-size: 15px;" data-toggle="tooltip" title="Created at: {{ note_detail.created_at }}">
-                                Last Updated: {{ note_detail.updated_at }}
+                            <p style="color: gray; font-size: 15px;" data-toggle="tooltip"
+                               title="{% trans "Created at" %}: {{ note_detail.created_at }}">
+                                {% trans "Last Updated" %}: {{ note_detail.updated_at }}
                             </p>
                         </div>
                     </div>
