--- a/notes/notes/templates/note_details.html
+++ b/notes/notes/templates/note_details.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load i18n %}
 {% load crispy_forms_tags %}
 {% block title %}{{ note_detail.note_title }}{% endblock %}
 {% load humanize %}
@@ -16,31 +17,48 @@
                         </h3>
                         <span class="col-3">
                         <div class="float-right d-none d-md-block d-lg-block">
-                            <a class="open-modal" data-url="{% url 'note_details_edit' note_detail.id %}" style="text-decoration: none; color: white" data-toggle="tooltip" title="Edit Note">    
-                                <span class="btn btn-primary" style="border-radius: 0;"><i class="far fa-edit"> </i></span>
+                            <a class="open-modal" data-url="{% url 'note_details_edit' note_detail.id %}"
+                               style="text-decoration: none; color: white" data-toggle="tooltip"
+                               title={% trans "Edit Note" %}>
+                                <span class="btn btn-primary" style="border-radius: 0;"><i
+                                        class="far fa-edit"> </i></span>
                             </a>
-                            <a href="{% url 'note_as_pdf' note_detail.slug %}" style="text-decoration: none; color: white" data-toggle="tooltip" title="Download Note as PDF">    
+                            <a href="{% url 'note_as_pdf' note_detail.slug %}"
+                               style="text-decoration: none; color: white" data-toggle="tooltip"
+                               title={% trans "Download Note as PDF" %}>
                                 <span class="btn btn-primary" style="border-radius: 0;"><i class="fa fa-download"> </i></span>
                             </a>
-                            <a class="open-delete-modal" data-url="{% url 'confirm_delete_note' note_detail.id %}" data-toggle="tooltip" title="Delete Note">
+                            <a class="open-delete-modal" data-url="{% url 'confirm_delete_note' note_detail.id %}"
+                               data-toggle="tooltip" title={% trans "Delete Note" %}>
                                 <span class="btn btn-danger" style="border-radius: 0;"><i class="far fa-trash-alt"></i></span>
                             </a>
                         </div>
 
                         <ul class="navbar-nav d-md-none d-lg-none d-sm-block d-xs-block">
                             <li class="nav-item dropdown dropleft">
-                                <a class="nav-link btn btn-light" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <a class="nav-link btn btn-light" href="#" id="navbarDropdown" role="button"
+                                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     <span><i class="fas fa-ellipsis-h"></i></span>
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="open-modal dropdown-item" data-url="{% url 'note_details_edit' note_detail.id %}" style="text-decoration: none; color: white" data-toggle="tooltip" title="Edit Note">    
-                                        <span class="btn btn-block btn-primary" style="border-radius: 0;"><i class="far fa-edit"></i> Edit</span>
+                                    <a class="open-modal dropdown-item"
+                                       data-url="{% url 'note_details_edit' note_detail.id %}"
+                                       style="text-decoration: none; color: white" data-toggle="tooltip"
+                                       title={% trans "Edit Note" %}>
+                                        <span class="btn btn-block btn-primary" style="border-radius: 0;"><i
+                                                class="far fa-edit"></i> {% trans "Edit" %}</span>
                                     </a>
-                                    <a class="dropdown-item" href="{% url 'note_as_pdf' note_detail.slug %}" style="text-decoration: none; color: white" data-toggle="tooltip" title="Download Note as PDF">    
-                                        <span class="btn btn-block btn-primary" style="border-radius: 0;"><i class="fa fa-download"></i> Download</span>
+                                    <a class="dropdown-item" href="{% url 'note_as_pdf' note_detail.slug %}"
+                                       style="text-decoration: none; color: white" data-toggle="tooltip"
+                                       title={% trans "Download Note as PDF" %}>
+                                        <span class="btn btn-block btn-primary" style="border-radius: 0;"><i
+                                                class="fa fa-download"></i> {% trans "Download" %}</span>
                                     </a>
-                                    <a class="dropdown-item open-delete-modal" data-url="{% url 'confirm_delete_note' note_detail.id %}" data-toggle="tooltip" title="Delete Note">
-                                        <span class="btn btn-danger btn-block" style="border-radius: 0;"><i class="far fa-trash-alt"></i> Delete</span>
+                                    <a class="dropdown-item open-delete-modal"
+                                       data-url="{% url 'confirm_delete_note' note_detail.id %}" data-toggle="tooltip"
+                                       title={% trans "Delete Note" %}>
+                                        <span class="btn btn-danger btn-block" style="border-radius: 0;"><i
+                                                class="far fa-trash-alt"></i>{% trans "Delete" %}</span>
                                     </a>
                                 </div>
                             </li>
@@ -51,15 +69,25 @@
                     <div class="row">
                         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                             <p style="color: gray; font-size: 15px;">
-                                Last Updated: {{ note_detail.updated_at|naturaltime }} <i class="fa fa-info-circle" aria-hidden="true" data-html="true" data-toggle="tooltip" title="Updated at: {{ note_detail.updated_at}} <br> Created at: {{ note_detail.created_at }}"></i><br>
+                                {% trans "Last Updated" %}: {{ note_detail.updated_at|naturaltime }} <i
+                                    class="fa fa-info-circle"
+                                    aria-hidden="true"
+                                    data-html="true"
+                                    data-toggle="tooltip"
+                                    title="{% trans "Updated at" %}: {{ note_detail.updated_at }} <br> {% trans "Created at" %}: {{ note_detail.created_at }}"></i><br>
                             </p>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                             <p class="float-right">
                             <div class="input-group">
-                                <input type="text" class="form-control" id="shareable_link" value="{{ absolute_url }}" readonly>
+                                <input type="text" class="form-control" id="shareable_link" value="{{ absolute_url }}"
+                                       readonly>
                                 <div class="input-group-append">
-                                    <span id="copy_shareable_link" class="input-group-text"><span data-toggle="tooltip" title="Copy Shareable Link" style="cursor: pointer;"><i class="far fa-copy"> </i></span></span>
+                                    <span id="copy_shareable_link" class="input-group-text"><span data-toggle="tooltip"
+                                                                                                  title={% trans "Copy Shareable Link" %}
+                                                                                                          style="cursor:
+                                                                                                  pointer;><i
+                                            class="far fa-copy"> </i></span></span>
                                 </div>
                             </div>
                             </p>
@@ -69,7 +97,8 @@
                     <div class="row">
                         <div class="col-12">
                             {% for tag in note_detail.tags.all %}
-                                <a href="{% url 'get_all_notes_tags' tag.slug %}"><span class="badge badge-primary">{{ tag.name }}</span></a>
+                                <a href="{% url 'get_all_notes_tags' tag.slug %}"><span
+                                        class="badge badge-primary">{{ tag.name }}</span></a>
                             {% endfor %}
                         </div>
                     </div>
@@ -91,21 +120,23 @@
 
                 <!-- Modal Header -->
                 <div class="modal-header">
-                    <h4 class="modal-title">Confirm Deletion</h4>
+                    <h4 class="modal-title">{% trans "Confirm Deletion" %}</h4>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
 
                 <!-- Modal body -->
                 <div class="modal-body">
                     <div class="row container">
-                        <h5>Are you sure you want to delete "{{ note_detail.note_title }}"?</h5>
+                        <h5>{% trans "Are you sure you want to delete" %} "{{ note_detail.note_title }}"?</h5>
                     </div>
                 </div>
 
                 <!-- Modal footer -->
                 <div class="modal-footer">
-                    <input type="submit" class="btn btn-primary" data-dismiss="modal" value="Cancel">
-                    <button type="button" class="btn btn-danger"><a href="{% url 'delete_single_note' note_detail.id %}" style="text-decoration: none; color: white">Delete</a></button>
+                    <input type="submit" class="btn btn-primary" data-dismiss="modal" value={% trans "Cancel" %}>
+                    <button type="button" class="btn btn-danger"><a href="{% url 'delete_single_note' note_detail.id %}"
+                                                                    style="text-decoration: none; color: white">{% trans "Delete" %}</a>
+                    </button>
                 </div>
 
             </div>
