--- a/notes/notes/templates/notes.html
+++ b/notes/notes/templates/notes.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
-{% block title %}Notes{% endblock %}
+{% load i18n %}
+{% block title %}{% trans "Notes" %}{% endblock %}
 {% load humanize %}
 {% block content %}
     <div class="container">
@@ -11,11 +12,12 @@
             {% if all_notes|length == 0 %}
                 <div class="col-lg-12 col-md-12 col-sm-12" style="font-size: 20px;">
                     <p>
-                        Hi, welcome to Django Notekeeper where you can store all your notes!
+                        {% trans "Hi, welcome to Notes where you can store all your notes!" %}
                     </p>
 
                     <p>
-                        You can add a new note to get started from left side menu by clicking on the <i class="fas fa-plus" style="font-size: 15px;"></i> sign.
+                        {% trans "You can add a new note to get started from left side menu by clicking on the" %} <i
+                            class="fas fa-plus" style="font-size: 15px;"></i> sign.
                     </p>
                 </div>
             {% else %}
@@ -24,25 +26,32 @@
                         <table class="table table-striped table-bordered" id="all_notes">
                             <thead class="thead-dark">
                             <tr class="text-center">
-                                <th scope="col">Title</th>
-                                <th scope="col">Last Updated</th>
-                                <th scope="col">Edit</th>
-                                <th scope="col">Delete</th>
+                                <th scope="col">{% trans "Title" %}</th>
+                                <th scope="col">{% trans "Last Updated" %}</th>
+                                <th scope="col">{% trans "Edit" %}</th>
+                                <th scope="col">{% trans "Delete" %}</th>
                             </tr>
                             </thead>
                             <tbody>
                             {% for note in all_notes %}
                                 <tr>
-                                    <td><a href="{% url 'note_detail' note.slug %}">{{ note.note_title|truncatechars:30 }}</a></td>
+                                    <td>
+                                        <a href="{% url 'note_detail' note.slug %}">{{ note.note_title|truncatechars:30 }}</a>
+                                    </td>
                                     <td>{{ note.updated_at|naturaltime }}</td>
                                     <td class="text-center">
-                                        <a class="open-modal" data-url="{% url 'note_details_edit' note.id %}" style="text-decoration: none; color: white" data-toggle="tooltip" title="Edit Note">
-                                            <span class="btn btn-primary" style="border-radius: 0;"><i class="far fa-edit"> </i></span>
+                                        <a class="open-modal" data-url="{% url 'note_details_edit' note.id %}"
+                                           style="text-decoration: none; color: white" data-toggle="tooltip"
+                                           title={% trans "Edit Note" %}>
+                                            <span class="btn btn-primary" style="border-radius: 0;"><i
+                                                    class="far fa-edit"> </i></span>
                                         </a>
                                     </td>
                                     <td class="text-center">
-                                        <a class="open-delete-modal" data-url="{% url 'confirm_delete_note' note.id %}" data-toggle="tooltip" title="Delete Note">
-                                            <span class="btn btn-danger" style="border-radius: 0;"><i class="far fa-trash-alt"></i></span>
+                                        <a class="open-delete-modal" data-url="{% url 'confirm_delete_note' note.id %}"
+                                           data-toggle="tooltip" title={% trans "Delete Note" %}>
+                                            <span class="btn btn-danger" style="border-radius: 0;"><i
+                                                    class="far fa-trash-alt"></i></span>
                                         </a>
                                     </td>
                                 </tr>
