--- a/notes/notes/templates/tags.html
+++ b/notes/notes/templates/tags.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
-{% block title %}Notes with tag: {{ tag }}{% endblock %}
+{% load i18n %}
+{% block title %}{% trans "Notes with tag" %}: {{ tag }}{% endblock %}
 {% load humanize %}
 {% block content %}
     <div class="container">
@@ -9,7 +10,7 @@
 
         <div class="row">
             <div class="col-12 text-center">
-                <h4>Notes with tag: {{ tag }}</h4>
+                <h4>{% trans "Notes with tag" %}: {{ tag }}</h4>
             </div>
         </div>
 
@@ -18,25 +19,30 @@
                 <table class="table table-striped table-bordered" id="all_notes">
                     <thead class="thead-dark">
                     <tr class="text-center">
-                        <th scope="col">Title</th>
-                        <th scope="col">Last Updated</th>
-                        <th scope="col">Edit</th>
-                        <th scope="col">Delete</th>
+                        <th scope="col">{% trans "Title" %}</th>
+                        <th scope="col">{% trans "Last Updated" %}</th>
+                        <th scope="col">{% trans "Edit" %}</th>
+                        <th scope="col">{% trans "Delete" %}</th>
                     </tr>
                     </thead>
                     <tbody>
                     {% for note in all_notes %}
                         <tr>
-                            <td><a href="{% url 'note_detail' note.slug %}">{{ note.note_title|truncatechars:25 }}</a></td>
+                            <td><a href="{% url 'note_detail' note.slug %}">{{ note.note_title|truncatechars:25 }}</a>
+                            </td>
                             <td>{{ note.updated_at|naturaltime }}</td>
                             <td class="text-center">
-                                <a class="open-modal" data-url="{% url 'note_details_edit' note.id %}" style="text-decoration: none; color: white" data-toggle="tooltip" title="Edit Note">
+                                <a class="open-modal" data-url="{% url 'note_details_edit' note.id %}"
+                                   style="text-decoration: none; color: white" data-toggle="tooltip"
+                                   title={% trans "Edit Note" %}>
                                     <span class="btn btn-primary" style="border-radius: 0;"><i class="far fa-edit"> </i></span>
                                 </a>
                             </td>
                             <td class="text-center">
-                                <a class="open-delete-modal" data-url="{% url 'confirm_delete_note' note.id %}" data-toggle="tooltip" title="Delete Note">
-                                    <span class="btn btn-danger" style="border-radius: 0;"><i class="far fa-trash-alt"></i></span>
+                                <a class="open-delete-modal" data-url="{% url 'confirm_delete_note' note.id %}"
+                                   data-toggle="tooltip" title={% trans "Delete Note" %}>
+                                    <span class="btn btn-danger" style="border-radius: 0;"><i
+                                            class="far fa-trash-alt"></i></span>
                                 </a>
                             </td>
                         </tr>
